[tool.poetry]
name = "openlenda"
version = "0.1.0"
description = "OpenLenda is a Japanese traffic light recognition model based on YOLOX."
authors = ["Yuto Nakamura <maron07222010@gmail.com>"]
readme = "README.md"
packages = [
    { include = "yolox"},
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat_footnote = "^0.1.1"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
joblib = "^1.3.2"
tqdm = "^4.66.1"
requests = "^2.31.0"
numpy = "1.24.4"
pandas = "^2.0.3"
scipy = "1.10.1"
scikit-learn = "1.3.0"
opencv-python = "^4.8.0.76"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.16.1"

[tool.poetry.group.torch.dependencies]
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
torchinfo = "^1.8.0"
onnx = "^1.14.1"
onnx-simplifier = "^0.4.33"
timm = "^0.9.5"
albumentations = "^1.3.1"

[tool.poetry.group.yolox.dependencies]
loguru = "^0.7.0"
thop = "^0.1.1.post2209072238"
ninja = "^1.11.1"
tabulate = "^0.9.0"
psutil = "^5.9.5"
tensorboard = "^2.14.0"
pycocotools = "^2.0.7"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
